ready for primetime

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div id="app">
     <header>
       <h1>The Compounding Effect of Incremental Changes</h1>
-      <div class="sub">Cut corners toward the center, repeatedly — watch the shape round towards a sphere.</div>
+      <div class="sub">Cut corners toward the center, repeatedly — watch the shape become more smooth.</div>
     </header>
     <div id="viewport" style="position:relative;">
       <canvas id="canvas"></canvas>
