--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <body>
   <div id="app">
     <header>
-      <h1>The Compounding Effect of Incremental Changes</h1>
+      <h1>The Compounding Effect of Incremental Improvements</h1>
       <div class="sub">Cut corners toward the center, repeatedly — watch the shape become more smooth.</div>
     </header>
     <div id="viewport" style="position:relative;">
