--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z128EHKM3R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z128EHKM3R');
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Iterative Cube Truncation Simulator</title>
   <style>
